2010-10-22 Fri  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bts-mail-ctrl-bug-unsubscribe):
	Correct subject text in email by adding (un) to (subscribe).

2010-10-21 Thu  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bts-mail-ctrl-usertag):
	Set default to user-mail-address in interactive prompt.
	(tinydebian-bts-mail-ctrl-usertag): Position cursor after
	'+' sign.

2010-10-20 Wed  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bts-mail-ctrl-usertag):
	Improve docstring.

2010-10-19 Tue  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-:bts-mail-type-it-nmu-message):
	Adjust wording.

2010-10-18 Mon  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el
	(tinydebian-bts-mail-ctrl-bug-subscribe): New user command.
	(tinydebian-bts-mail-ctrl-bug-unsubscribe): New user command.

2010-10-16 Sat  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-debian-bug-info-macro):
	Document INFO structure in docstring.
	(tinydebian-debian-parse-bts-bug-info-raw): Add missing fields
	to docstring.
	(tinydebian-bts-mail-type-reply): if bug report number is
	different from current line, query BTS directly with HTTP
	to retrieve correct subject for the composed email.

2010-10-15 Fri  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bts-mail-type-it-nmu): Chnage
	subject to follow standard Debian BTS message format
	'Bug#NNNN: <action> (<description>)'

2010-10-12 Tue  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-mail-mode): Correct
	menu entry for "notfixed" and "fixed" BTS control commands.

2010-06-18  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-:gnu-bts-email-address): New.
	(tinydebian-gnu-bts-email-compose): New.
	(tinydebian-gnu-bts-email-control): New.
	(tinydebian-bts-generic-email-control): Detect GNU debbugs.
	(tinydebian-emacs-gnu-type-p): New.